<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="add_expense">Add Expense</string>
    <string name="expense_title">Title</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_category">Category</string>
    <string name="expense_date">Date</string>
    <string name="expense_note">Note (optional)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="no_expenses">No expenses yet.\nTap + to add one.</string>
    <string name="hint_title">e.g. Lunch, Bus ticket…</string>
    <string name="hint_amount">0.00</string>
    <string name="hint_note">Add a note…</string>
    <string name="error_empty_title">Please enter a title</string>
    <string name="error_empty_amount">Please enter an amount</string>
    <string name="error_invalid_amount">Please enter a valid amount</string>
    <string name="currency_symbol">$</string>

    <string-array name="categories">
        <item>Food</item>
        <item>Transport</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>Other</item>
    </string-array>
</resources>